Fix: align hero-image contents to center

--- a/scss/modules/_hero-image.scss
+++ b/scss/modules/_hero-image.scss
@@ -3,6 +3,7 @@
  */
 
 .hero-image {
+  display: table;
   position: relative;
   width: 100%;
   height: 26em;
@@ -20,7 +21,9 @@
   background-repeat: no-repeat;
 }
 .hero-image__content {
+  display: table-cell;
   padding: 3em;
+  vertical-align: middle;
   text-align: center;
   color: #f5f5a6;
 }
